5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1863_2217.log
== TEST (2019-07-02 11:14:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))

vet = zeros((n**2 - n)//2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:14:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))

vet = zeros((n**2 - n)//2)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:15:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:15:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:17:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(n):
	for j in range(n):
		if(i > j):
			vet[i] = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:17:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:18:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]

print(min(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:18:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]

print(min(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:19:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]

print(min(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:19:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]

print(min(vet))
-- EXECUTION TIME:
0.959501
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
0.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:19:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]

print(min(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:19:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]
		else:
			vet[i] = vet[i]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:20:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]
		else:
			vet[i] = vet[i]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:21:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:21:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for j in range(x):
	for i in range(x):
		if(i > j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:22:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:23:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
vet = zeros(x)

for i in range(x):
	for j in range(x):
		if(i > j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:25:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:25:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:27:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j] 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:28:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i + 1,j] 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:28:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j] 
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:29:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i == j):
			vet[i] = vet[i]
		elif(i < j):
			vet[i] = vet[i]
		elif(i > j):
			vet[j] = n[i,j]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:30:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i >j):
			vet[i] = n[i,j]
		elif(i > j):
			vet[j] = n[i,j]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:32:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i >j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:32:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i >j):
			vet[0] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:32:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i >j):
			vet[0] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i >j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:35:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for j in range(x1):
	for i in range(x1):
		if(i > j):
			vet[j] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:35:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[j] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:36:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:42:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)
t = 0
for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[t] = n[i,j]
		t = t + 1	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:42:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)
i = 0
for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]
		i = i + 1	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:43:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:43:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:43:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i - 1] = n[i,j]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:44:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:49:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[:,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:49:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:50:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1 + 1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:50:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[0] = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[0] = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[] = n[i,j]

print(vet)
-- ERROR:
File "XXXX", line 12
    vet[] = n[i,j]
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:53:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = array(eval(input("Matriz: ")))
x = shape(n)[0]
x1 = ((x**2 - x)//2)
vet = zeros(x1)

for i in range(x1):
	for j in range(x1):
		if(i > j):
			vet[i] = n[i,j]

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
